test/semantic-errors/11.pas
program p;
begin while 2 do writeln("");
end.
